[package]
name = "sptui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.19"
crossterm = "0.25"
anyhow = "1.0.68"
tokio = {version = "1.24.1", features = ["full"]}
rspotify = {version = "0.11.6", features = ["env-file", "cli"]}
serde = {version = "1.0.152", features = ["derive"]}
serde_yaml = "0.9.16"
